--- a/client/styles/_icons.scss
+++ b/client/styles/_icons.scss
@@ -556,3 +556,7 @@ body.targetting-enemies, body.targetting-friendlies, body.targetting-item {
 .quick-craft, .single-craft {
     user-select: none;
 }
+
+.buff-remaining-time {
+  color: #00f;
+}
